[gd_scene load_steps=7 format=2]

[ext_resource path="res://code/MenuLevel.gd" type="Script" id=1]
[ext_resource path="res://assets/test.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/Hezaedrus-Light.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/fonts/Hezaedrus-Medium.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 1
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 3 )

[node name="MenuLevel" type="Node2D"]
script = ExtResource( 1 )

[node name="StoryInfo" type="Node2D" parent="."]
visible = false
light_mask = 0
position = Vector2( 0, -120 )

[node name="Infobox" type="ColorRect" parent="StoryInfo"]
margin_top = -100.0
margin_right = 720.0
margin_bottom = 200.0
color = Color( 1, 0.521569, 0.521569, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharSel" type="Node2D" parent="StoryInfo"]
position = Vector2( 239.652, 103.344 )

[node name="StartButton" type="Button" parent="StoryInfo"]
margin_left = 5.3454
margin_top = 173.726
margin_right = 53.3454
margin_bottom = 193.726
text = "Begin"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OtherInfo" type="Node2D" parent="."]
visible = false
light_mask = 0
position = Vector2( 0, -120 )
__meta__ = {
"_edit_group_": true
}

[node name="ColorRect2" type="ColorRect" parent="OtherInfo"]
margin_top = -2.0
margin_right = 480.0
margin_bottom = 198.0
color = Color( 1, 0.521569, 0.521569, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="OtherInfo"]
anchor_right = 1.0
margin_right = 476.0
margin_bottom = 14.0
text = "yeah fuckin uhhhh

y'all got annyyy

fuckin uhhh

sangdwitches"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main" type="Node2D" parent="."]
light_mask = 0
__meta__ = {
"_edit_lock_": true
}

[node name="Mask" type="Light2D" parent="Main"]
position = Vector2( 358.586, -81.8445 )
scale = Vector2( 11.3149, 4.99512 )
texture = ExtResource( 2 )
mode = 3
range_item_cull_mask = 0

[node name="ColorRect" type="ColorRect" parent="Main"]
light_mask = 0
margin_right = 720.0
margin_bottom = 120.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Main"]
light_mask = 0
margin_right = 718.0
margin_bottom = 62.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Level 1: Verb the Nouns or Die"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CompletionInfo" type="Label" parent="Main"]
light_mask = 0
anchor_left = 1.0
anchor_right = 1.0
margin_left = 5.50171
margin_top = 53.4983
margin_right = 712.502
margin_bottom = 116.498
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "X X X"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="StoryInfo/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="gui_input" from="Main/ColorRect" to="." method="_on_select"]
